--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,10 @@
 <body>
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Design Allim</a>
+        <a class="navbar-brand" href="/">
+            <img src="/asset/logo.gif" alt="Design Allim" class="navbar-logo">
+        </a>
+
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link nav-item" href="/portfolio">시공사례</a>
