chore/fix : 로고 적용 및 로그아웃 리다이렉션페이지 수정

--- a/src/main/resources/static/css/portfolio.css
+++ b/src/main/resources/static/css/portfolio.css
@@ -76,6 +76,10 @@ nav {
 .modal {
     overflow-y: auto;
 }
+.navbar-brand .navbar-logo {
+    width: 4em; /* 상위 요소 폰트 크기의 4배 */
+    height: auto; /* 높이 자동 조정 */
+}
 
 
 /* 오버레이 스타일 */
