view : Footer 추가

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -204,5 +204,21 @@
     </div>
 </div>
 
+
+<footer class="footer">
+    <div class="footer-section footer-left">
+        <p>디자인올림</p>
+        <p>춘천시 공지로</p>
+        <p>문의 010-4021-1622</p>
+    </div>
+    <div class="footer-section footer-center">
+        <p>인/아웃 인테리어 리모델링 철구조물</p>
+        <p>영어</p>
+    </div>
+    <div class="footer-section footer-right">
+        <p>관리자 로그인</p>
+    </div>
+</footer>
+
 </body>
 </html>
