--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /* 이 속성은 패딩을 요소의 크기에 포함시킵니다. */
+    font-weight: bold;
+}
+
 .navbar {
     background-color: transparent;
     position: absolute;
@@ -69,4 +76,49 @@
     color: white;
 }
 
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    background-color: #f0f0f0;
+    font-size: 14px;
+    border-top: 1px solid #e0e0e0;
+    width: 100%; /* 너비가 충분한지 확인 */
+}
+.footer div {
+    display: flex;
+    flex-direction: column;
+}
 
+
+.footer-section {
+    display: flex;
+    flex-direction: column;
+    padding: 0 5px;
+}
+.footer-left{
+    font-size: 14px;
+}
+.footer-center {
+    font-size: 20px;
+    display: flex; /* Flexbox를 사용하여 내부 요소를 정렬합니다 */
+    justify-content: center; /* 가로 방향으로 중앙 정렬 */
+    align-items: center; /* 세로 방향으로 중앙 정렬 */
+    text-align: center; /* 텍스트를 중앙 정렬합니다 */
+}
+
+.footer-right {
+    font-size: 21px;
+    display: flex;
+    flex-direction: column; /* 자식 요소들을 세로로 정렬합니다. */
+    justify-content: center; /* 세로 방향에서 중앙 정렬합니다. */
+    align-items: flex-end; /* 가로 방향에서 오른쪽 정렬합니다. */
+    text-align: right; /* 텍스트를 오른쪽 정렬합니다. */
+    width: 100%; /* 필요한 경우, .footer-right의 너비를 조정합니다. */
+}
+
+
+
+.footer-left, .footer-center, .footer-right {
+    flex: 1;
+}
